# CodeOwlV3

./: .gitignore  README.md
CodeOwlBE/: main.py  pyproject.toml
CodeOwlBE/src/db/: embedding_service.py  vector_indexer.py
CodeOwlBE/src/git_ops/: repo_manager.py
CodeOwlBE/src/services/: simple_ast_parser.py  simple_semantics.py  vector_retriever.py
CodeOwlBE/src/services/ast/: __init__.py  base_parser.py  graph_builder.py  parser.py
CodeOwlBE/src/services/ast/extractors/: __init__.py  go_extractor.py  javascript_extractor.py  python_extractor.py  rust_extractor.py
CodeOwlBE/src/utils/: config.py  qdrant_client.py
